version 3.3 (2013-xx-xx)
	* Add support for specifying color to light sources.

version 3.2 "Phong's normals" (2013-02-06)
	* Add support for Phong-shaded triangles.

version 3.1 "Pipe Dream" (2013-01-17)
	* Add support for new geometric object "cylinder".
	* Fix distribution to include the test script.

version 3.0 "The X-mas Tracer" (2012-12-19)
	* Support for multithreading (compile-time option).
	* Add support for using multiple image formats for textures
	  and as output format (those supported by ImageMagick).
	* Removed Protracer-specific alternative syntax for specifying
	  planes and triangles (to be more compatible with Povray.)
        * Requires a C++11 compiler (such as g++ 4.7.x).
	* Requires ImageMagick++ (used for reading/writing images).

version 2.8 "Oktoberfest" (2012-09-25)
	* Added test script.

version 2.7 "September" (2012-09-12)
	* Enhanced scene description language:
	  * Support declaring vectors using only two components,
	    assuming z = 0.
	  * Added support for declaring union objects (grouping several
	    sub-objects together).
	* Print an error message if the input file could not be read.

version 2.6 "Trace outside the box" (2012-08-28)
	* Enhanced scene description language:
	  * Support new geometric object "box".
	  * Added support for the function "inside" to determine if a point
	    (vector) is located inside an object.

version 2.5 "May-tracer" (2012-05-06)
	* Bugfix: Fix rotation of discs working properly.
	* Enhanced scene description language:
	  * Added support for the functions max_extents and min_extents
	    to get the bounding box coordinates (as vectors) of a declared
	    object.

version 2.4 "Springtracer" (2012-04-23)
	* Enhanced scene description language:
	  * Added numerical constants "image_width" and "image_height"
	    set to the image width and height (in pixels).
	  * Add support for moving and rotating light sources and cameras
	    with the "translate" and "rotate" keywords.
